force-app/main/default/objects/ReturnOrder/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <label>Source Order</label>
    <type>Lookup</type>
    <referenceTo>Order</referenceTo>
    <relationshipName>Return_Orders</relationshipName>
    <relationshipLabel>Return Orders</relationshipLabel>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>