force-app/main/default/objects/ReturnOrder/fields/Refund_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refund_Amount__c</fullName>
    <label>Refund Amount</label>
    <type>Currency</type>
    <precision>12</precision>
    <scale>2</scale>
</CustomField>