force-app/main/default/objects/ReturnOrder/fields/Return_Label_Url__c.field-meta.xml
<CustomField>
    <fullName>Return_Label_Url__c</fullName>
    <label>Return Label URL</label>
    <type>Url</type>
</CustomField>