force-app/main/default/objects/ReturnOrder/fields/Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>Return_Reason__c</fullName>
    <label>Return Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Damaged</fullName><default>false</default><label>Damaged</label></value>
            <value><fullName>Wrong Item</fullName><default>false</default><label>Wrong Item</label></value>
            <value><fullName>Not As Described</fullName><default>false</default><label>Not As Described</label></value>
            <value><fullName>Changed Mind</fullName><default>false</default><label>Changed Mind</label></value>
            <value><fullName>Quality</fullName><default>false</default><label>Quality</label></value>
            <value><fullName>Other</fullName><default>false</default><label>Other</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>