force-app/main/default/objects/ReturnOrder/fields/Return_Tracking__c.field-meta.xml
<CustomField>
    <fullName>Return_Tracking__c</fullName>
    <label>Return Tracking</label>
    <type>Text</type>
    <length>100</length>
</CustomField>