force-app/main/default/objects/ReturnOrder/fields/Woo_Refund_Id__c.field-meta.xml
<CustomField>
    <fullName>Woo_Refund_Id__c</fullName>
    <label>Woo Refund Id</label>
    <type>Text</type>
    <length>64</length>
    <externalId>true</externalId>
</CustomField>