force-app/main/default/objects/ReturnOrder/validationRules/Return_Requires_Delivered_Order.validationRule-meta.xml
<ValidationRule>
    <fullName>Return_Requires_Delivered_Order</fullName>
    <active>true</active>
    <description>A return can only be created for a source order that has been delivered, already in return workflow, returned, or refunded.</description>
    <errorConditionFormula>AND(
  NOT(ISBLANK(Order__c)),
  NOT(ISPICKVAL(Order__r.Fulfillment_Status__c, "Delivered")),
  NOT(ISPICKVAL(Order__r.Fulfillment_Status__c, "Return Pending")),
  NOT(ISPICKVAL(Order__r.Fulfillment_Status__c, "Returned")),
  NOT(ISPICKVAL(Order__r.Fulfillment_Status__c, "Refunded"))
)</errorConditionFormula>
    <errorMessage>Returns are only allowed once the order has been delivered.</errorMessage>
</ValidationRule>